/*
 * $Id: ChangeLog,v 1.1295 2003/07/24 20:53:43 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-25 3:51 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/filesys.c
    * hb_fsPOpen() small correction to allow second parameter be NULL

2003-07-25 03:45 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/compiler/harbour.c
   * source/compiler/hbusage.c
   * source/compiler/cmdcheck.c
   * include/hbcomp.h
     * reverted back implementation of /p0

2003-07-24 20:45 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/filesys.c
    ! hb_fsPOpen changed for security reasons: uid and gid
      restored and open handlers closed, unused stdin/std{out,err}
      of chiled process redirected to /dev/null
      Before this changes buggy printer program can demage
      data in files previously open by xHarbour application

2003-07-24 08:00 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/ttable.prg
    ! Replaced METHODs that return nil by PROCEDUREs.
    - Removed some starnge chars in line comments

  * include/ttable.ch
    ! DEFINE ORDER to accept parameter [KEY]

  * tests/tsttable.prg
    ! Name of generated dbf file is now tsttable.dbf
    ! All field names from portuguese to english
    + Date and logical test fields
    * Minor formating

2003-07-24 11:00 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * makefile.vc
   * makefile.nt
     + Add hboutdebug.c file dependency

   * source/rtl/hboutdebug.c
     + Add windows.h under Windows. Some compilers want it.

   * make_b32.bat
     * unremarked call to notepad.exe

2003-07-24 10:40 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * source/compiler/harbour.c
   * source/compiler/hbusage.c
   * source/compiler/cmdcheck.c
   * include/hbcomp.h